# learn_rust

./: Cargo.toml
src/: algorithms.rs  main.rs  phrases.rs
src/test/: find_file.rs  find_file2.rs  mod.rs  test1.rs  test2.rs  test_collections.rs  test_file.rs  test_option.rs  test_string.rs
