[package]
name = "learn_rust"
version = "0.1.0"
authors = ["arewei <arezhiwei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
error-chain = "0.12.4"
url = "2.2.2"
walkdir = "2.3.2"
glob = "0.3.0"
regex = "1.5.4"